<resources>
    <string name="app_name">Dear Friend</string>

    <string name="statements">Заведение</string>
    <string name="about_me">О себе:</string>

    //labels
    <string name="label_splash">Старт</string>
    <string name="label_map">Карты</string>
    <string name="label_profile">Профиль</string>
    <string name="label_create_request">Создание заявки</string>
    <string name="label_select_photo">Выбор фото</string>
    <string name="label_request_details">Подробности заявки</string>
    <string name="label_organization_details">Подробности организации</string>
    <string name="label_registration">Регистрация</string>
    <string name="label_enter_phone">Ввод телефона</string>
    <string name="label_enter_code">Ввод кода</string>
    <string name="label_require_geo">Мы не сможем показать организации без твоего местоположения</string>

    //titles
    <string name="title_enter_phone">Какой у вас\nномер\nтелефона?</string>
    <string name="title_with_phone">с номером %s</string>
    <string name="are_you_user">Вы уже с нами?</string>
    <string name="login">Войти</string>
    <string name="code_sent">Код был отправлен на номер</string>

    //hints
    <string name="phone_number_hint">НОМЕР ТЕЛЕФОНА</string>
    <string name="name_hint">ИМЯ И ФАМИЛИЯ</string>
    <string name="password_hint">ПАРОЛЬ</string>

    //buttons
    <string name="get_code">Получить код</string>
    <string name="register">Зарегистрироваться</string>
    <string name="change_num"><u>Изменить номер</u></string>

    //content description
    <string name="search_description">Поиск</string>
    <string name="add_description">Создать</string>

    //errors
    <string name="require_name_and_surname">Необходимы имя и фамилия</string>
    <string name="create_request_error">Не удалось отправить заявку :(</string>
    <string name="cant_login">Не удалось войти :(</string>
    <string name="cant_register">Не удалось создать аккаунт :(</string>
    <string name="create_request_success">Заявка успешно создана!</string>

    //tokens
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZ2xlYi1tYXgiLCJhIjoiY2w1bTM0b2xjMDVmMjNicDhncjJwbGo3dSJ9.e196gGMK3Q57AXei-2YVBA</string>

    <string name="what_search">Что ищем?</string>

    <string name="change_number"><u>Изменить</u></string>
    <string name="title_get_photo_ar">AR-съемка</string>
    <string name="title_get_photo_camera">Сделать фото</string>
    <string name="title_get_photo_gallery">Выбрать из галереи</string>
    <string name="create_request">Создать заявку</string>
    <string name="create_request_button">Создать</string>
    <string name="no_internet_description">Ошибка соединения с интернетом.\nПроверьте подключение</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="resend_code">Получить новый код через</string>
    <string name="invalid_code">Неверный код!</string>

    <string name="map_style">mapbox://styles/gleb-max/cl5m6rbl6004l14o82i8q872n</string>
</resources>