<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <action
        android:id="@+id/action_navigation_main"
        app:destination="@id/navigation_map"
        app:launchSingleTop="true"
        app:popUpTo="@id/mobile_navigation" />

    <action
        android:id="@+id/action_navigation_auth"
        app:destination="@id/navigation_enter_phone"
        app:launchSingleTop="true"
        app:popUpTo="@id/mobile_navigation" />

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.habit.tracker.presentation.view.SplashFragment"
        android:label="@string/label_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/navigation_enter_phone"
        android:name="com.habit.tracker.presentation.view.EnterPhoneFragment"
        android:label="@string/label_enter_phone"
        tools:layout="@layout/fragment_enter_phone">
        <action
            android:id="@+id/action_navigation_enter_phone_to_navigation_enter_code"
            app:destination="@id/navigation_enter_code" />
        <action
            android:id="@+id/action_navigation_enter_phone_to_navigation_registration"
            app:destination="@id/navigation_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_enter_code"
        android:name="com.habit.tracker.presentation.view.EnterCodeFragment"
        android:label="@string/label_enter_code"
        tools:layout="@layout/fragment_enter_code" />

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.habit.tracker.presentation.view.RegistrationFragment"
        android:label="@string/label_registration"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_navigation_registration_to_navigation_enter_code"
            app:destination="@id/navigation_enter_code" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.habit.tracker.presentation.view.MapFragment"
        android:label="@string/label_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_navigation_map_to_navigation_organization_details"
            app:destination="@id/navigation_organization_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.habit.tracker.presentation.view.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_organization_details"
        android:name="com.habit.tracker.presentation.view.OrganizationFragment"
        android:label="@string/label_organization_details"
        tools:layout="@layout/fragment_organization">
        <argument
            android:name="organizationId"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_organization_details_to_navigation_create_request"
            app:destination="@id/navigation_create_request" />
        <action
            android:id="@+id/action_navigation_organization_details_to_navigation_request_details"
            app:destination="@id/navigation_request_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_request"
        android:name="com.habit.tracker.presentation.view.CreateRequestFragment"
        android:label="@string/label_create_request"
        tools:layout="@layout/fragment_create_request">

        <action
            android:id="@+id/action_navigation_create_request_to_navigation_select_photo"
            app:destination="@id/navigation_select_photo" />
    </fragment>

    <dialog
        android:id="@+id/navigation_select_photo"
        android:name="com.habit.tracker.presentation.view.SelectPhotoBottomSheetFragment"
        android:label="@string/label_select_photo"
        tools:layout="@layout/fragment_select_photo_bottom_sheet">
        <argument
            android:name="photoPosition"
            app:argType="integer" />

    </dialog>

    <fragment
        android:id="@+id/navigation_request_details"
        android:name="com.habit.tracker.presentation.view.RequestDetailsFragment"
        android:label="@string/label_request_details"
        tools:layout="@layout/fragment_request_details" />

</navigation>