<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/statements" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerOrganization"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatements">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_problems_item" />

            <include layout="@layout/shimmer_problems_item" />

            <include layout="@layout/shimmer_problems_item" />

            <include layout="@layout/shimmer_problems_item" />

            <include layout="@layout/shimmer_problems_item" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_request_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clipToPadding="false"
        android:paddingBottom="32dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatements"
        tools:itemCount="8"
        tools:listitem="@layout/layout_request_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:contentDescription="@string/add_description"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNoInternetPlaceholder"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_no_internet_128"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/no_internet_description"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/ivNoInternetPlaceholder"
        app:layout_constraintStart_toStartOf="@id/ivNoInternetPlaceholder"
        app:layout_constraintTop_toBottomOf="@id/ivNoInternetPlaceholder" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnRetry"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_replay"
        android:tint="@color/dark_green"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/tvNoInternet"
        app:layout_constraintStart_toStartOf="@id/tvNoInternet"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternet" />

</androidx.constraintlayout.widget.ConstraintLayout>